--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -21,3 +21,49 @@ top: 9em;
   max-width: 960px;
   margin: 0 auto;
 }
+
+.company .container{
+  display: flex;
+  align-items: center;
+  padding: 12px 0 12px .5em;
+}
+
+.company{
+  background-color: black;
+  color: white;
+}
+
+.company img{
+  height: 1.5em;
+  padding-right: 15px;
+}
+
+img{
+  border-style; none;
+}
+
+body{
+  font-family: Helvetica, sans-serif;
+  line-height: 1.4em;
+}
+
+.main-section{
+  background: src="resources/images/moto.jpeg";
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 25em;
+}
+
+.headline {
+    background-color: black;
+    color: white;
+    width: 20em;
+    padding: 2em 3em;
+    position: relative;
+    top: 9em;
+  }
+
+  h1, h4{
+    font-weight: bold;
+  }
