--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -3,6 +3,18 @@
   color: white;
 }
 
+html{
+  font-size: 18px;
+  background-color: white;
+}
+
+body{
+  display: block;
+  font-family: Helvetica, sans-serif;
+  line-weight: 1.4em;
+  margin: 0;
+}
+
 div{
   display: block;
 }
