--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,7 +1,3 @@
-.header{
-  background-color:  black;
-  color: white;
-}
 
 html{
   font-size: 18px;
@@ -15,10 +11,14 @@ body{
   margin: 0;
 }
 
+.company{
+  background-color:  black;
+  color: white;
+}
+
 div{
   display: block;
 }
-
 
 .leadline{
 background-color: black;
