--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,7 +1,11 @@
 
 html{
   font-size: 18px;
-  background-color: white;
+  background-color: red;
+}
+
+head{
+  display: none;
 }
 
 body{
@@ -10,7 +14,7 @@ body{
   line-weight: 1.4em;
 }
 
-.company{
+.company {
   background-color: black;
   color: white;
 }
