--- a/resources/css/dogbone.css
+++ b/resources/css/dogbone.css
@@ -38,3 +38,24 @@ body{
 img{
   border-style; none;
 }
+
+.main-section{
+  background: src="resources/images/moto.jpeg";
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 25em;
+}
+
+.headline {
+    background-color: black;
+    color: white;
+    width: 20em;
+    padding: 2em 3em;
+    position: relative;
+    top: 9em;
+  }
+
+  h1, h4{
+    font-weight: bold;
+  }
