--- a/resources/css/dogbone.css
+++ b/resources/css/dogbone.css
@@ -40,11 +40,24 @@ img{
 }
 
 .main-section{
-  background: src="resources/images/moto.jpeg";
+  background: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/moto.jpeg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   height: 25em;
+}
+
+nav{
+  background-color: firebrick;
+  color: white;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: .75em 0;
+  list-style: none;
 }
 
 .headline {
