--- a/resources/css/dogbone.css
+++ b/resources/css/dogbone.css
@@ -1,7 +1,7 @@
 
 html{
   font-size: 18px;
-  background-color: red;
+  background-color: white;
 }
 
 head{
@@ -72,3 +72,28 @@ nav ul {
   h1, h4{
     font-weight: bold;
   }
+
+  .products {
+    display: flex;
+    justify-content: space-between;
+    margin: 3em 0 0 0;
+
+  .product{
+    width: 30%;
+  }
+
+  .product-image{
+    border: 4px solid black;
+    padding:2em 0;
+    height: 9em;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+.description{
+  display: block;
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: .5em;
+}
