--- a/resources/css/dogbone.css
+++ b/resources/css/dogbone.css
@@ -73,22 +73,24 @@ nav ul {
     font-weight: bold;
   }
 
-  .products {
+  .products, .business-info {
     display: flex;
     justify-content: space-between;
     margin: 3em 0 0 0;
-
-  .product{
-    width: 30%;
   }
 
-  .product-image{
+  .product{
+    width: 47%;
+  }
+
+  .product-image {
     border: 4px solid black;
     padding:2em 0;
     height: 9em;
     display:flex;
     justify-content: center;
     align-items: center;
+  }
 
 .description{
   display: block;
