--- a/resources/css/dogbone.css
+++ b/resources/css/dogbone.css
@@ -126,3 +126,13 @@ footer {
   padding: 5em 0;
   margin-top: 4em;
 }
+
+@media only screen and (max-width: 1024px)
+.mobile-nav{
+  display: block;
+  text-align: center;
+}
+
+.mobile-nav{
+  
+}
