--- a/resources/css/dogbone.css
+++ b/resources/css/dogbone.css
@@ -127,12 +127,11 @@ footer {
   margin-top: 4em;
 }
 
-@media only screen and (max-width: 1024px)
-.mobile-nav{
+@media only screen and (max-width: 1024px){
   display: block;
   text-align: center;
 }
 
 .mobile-nav{
-  
+  display: none;
 }
