--- a/resources/css/dogbone.css
+++ b/resources/css/dogbone.css
@@ -127,11 +127,22 @@ footer {
   margin-top: 4em;
 }
 
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 1024px)
+.mobile-nav {
   display: block;
   text-align: center;
 }
 
 .mobile-nav{
+  display: none;
+}
+
+@media only screen and (max-width: 1024px)
+body {
+  font-size: 16px;
+}
+
+@media only screen and (max-width: 1024px)
+nav ul {
   display: none;
 }
