--- a/resources/css/dogbone.css
+++ b/resources/css/dogbone.css
@@ -127,6 +127,12 @@ footer {
   margin-top: 4em;
 }
 
+@media only screen and (max-width: 470px){
+  footer{
+    text-align: center;
+  }
+}
+
 @media only screen and (max-width: 1024px)
 .mobile-nav {
   display: block;
@@ -137,12 +143,53 @@ footer {
   display: none;
 }
 
-@media only screen and (max-width: 1024px)
+@media only screen and (max-width: 1024px){
 body {
   font-size: 16px;
+  }
 }
 
-@media only screen and (max-width: 1024px)
+@media only screen and (max-width: 1024px){
 nav ul {
   display: none;
+}
+
+.mobile-nav: {
+  display: block;
+  text-align: center;
+}
+}
+
+@media only screen and (max-width: 470px){
+  .main-section{
+    height: 15em;
+  }
+
+
+@media only screen and (max-width: 1024px){
+  .product {
+    width: 47%;
+  }
+
+  .product.glasses{
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 470px){
+  .product, business-info{
+    flex-wrap: wrap;
+  }
+
+  .product {
+    width: 90%;
+    margin: auto;
+  }
+    .product.watch {
+      display:none;
+    }
+  .info{
+    width: 90%;
+    margin: .5em auto;
+  }
 }
